<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <TextView
            android:id="@+id/color_prompt_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numColorsMessage"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <EditText
            android:id="@+id/colorInputET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tile_color_hint"
            android:inputType="number"
            android:textCursorDrawable="@null"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/levelSelectMessage"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <RadioGroup
            android:id="@+id/relativeRadioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/mediumRB"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/easyRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:checked="true"
                android:text="@string/easy"/>

            <RadioButton
                android:id="@+id/mediumRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/medium"/>

            <RadioButton
                android:id="@+id/hardRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/hard"/>
        </RadioGroup>
    </LinearLayout>

</ScrollView>